tdf#92115 KDE4: better listbox theming

This is not a final fix to apply full theming, but it makes
the listboxes at least usable again.

Change-Id: Ic83b8209208fddafe34e04f4e5e531f0d28e62bd